# SimpleIPParser

./: .gitignore  CMakeLists.txt  Converting.h  consts.h  fileManagement.h  input  input2  main.c  memoryUtils.h  output  parsing.h  structs.h  utils.h
